# cp3_atm_projeto

./: .gitignore  CMakeLists.txt  README.md
include/: extrato.h  menu.h  operacoes.h  util.h
src/: extrato.c  main.c  menu.c  operacoes.c  util.c
